feat: add edit profile endpoint + docs api
